--- a/package.json
+++ b/package.json
@@ -57,5 +57,5 @@
   "bugs": {
     "url": "https://github.com/suzukaotto/offline-prototype/issues"
   },
-  "homepage": "https://github.com/suzukaotto/offline-prototype#readme"
+  "homepage": "https://github.com/suzukaotto/offline-prototype"
 }
