--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "offline",
   "version": "1.0.0",
   "description": "",
-  "main": "indexx.html",
+  "main": "index.html",
   "dependencies": {
     "abbrev": "^1.1.1",
     "anymatch": "^3.1.3",
